@@ -1193,6 +1193,7 @@ package Snames is
    Name_Archive_Suffix                     : constant Name_Id := N + $;
    Name_Binder                             : constant Name_Id := N + $;
    Name_Body_Suffix                        : constant Name_Id := N + $;
+   Name_Build_Slaves                       : constant Name_Id := N + $;
    Name_Builder                            : constant Name_Id := N + $;
    Name_Clean                              : constant Name_Id := N + $;
    Name_Compiler                           : constant Name_Id := N + $;
@@ -1308,8 +1309,10 @@ package Snames is
    Name_Project_Files                      : constant Name_Id := N + $;
    Name_Project_Path                       : constant Name_Id := N + $;
    Name_Project_Subdir                     : constant Name_Id := N + $;
+   Name_Remote                             : constant Name_Id := N + $;
    Name_Response_File_Format               : constant Name_Id := N + $;
    Name_Response_File_Switches             : constant Name_Id := N + $;
+   Name_Root_Dir                           : constant Name_Id := N + $;
    Name_Roots                              : constant Name_Id := N + $; -- GB
    Name_Required_Switches                  : constant Name_Id := N + $;
    Name_Run_Path_Option                    : constant Name_Id := N + $;
